--- a/css/base/base.css
+++ b/css/base/base.css
@@ -10,3 +10,18 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
         sans-serif;
 }
+
+button {
+    width: 170px;
+    font-size: 14px;
+    padding: 15px;
+    background-image: linear-gradient(to right, #8490ff, #62bdfc);
+    color: white;
+    border: none;
+    text-transform: uppercase;
+}
+
+button:hover {
+    cursor: pointer;
+    box-shadow: 0px 4px 8px rgb(132 144 255 / 30%);
+}
