--- a/css/base/base.css
+++ b/css/base/base.css
@@ -11,7 +11,7 @@ body {
         sans-serif;
 }
 
-button {
+.btn {
     width: 170px;
     font-size: 14px;
     padding: 15px;
@@ -21,7 +21,7 @@ button {
     text-transform: uppercase;
 }
 
-button:hover {
+.btn:hover {
     cursor: pointer;
     box-shadow: 0px 4px 8px rgb(132 144 255 / 30%);
 }
