--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,3 +1,9 @@
+@import "../base/base.css";
+@import "../base/layout.css";
+@import "../components/button.css";
+@import "../components/footer.css";
+@import "../components/header.css";
+
 /* base */
 
 /* 3rd-party */
