--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,14 +1,13 @@
-@import "../base/base.css";
-@import "../base/layout.css";
-@import "../components/button.css";
-@import "../components/footer.css";
-@import "../components/header.css";
-
 /* base */
-
+@import "../base/base.css";
+/* layout */
+@import "../base/layout.css";
 /* 3rd-party */
 
 /* components */
+@import "../components/button.css";
+@import "../components/footer.css";
+@import "../components/header.css";
 
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
