--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -4,6 +4,8 @@
 @import "../base/layout.css";
 /* 3rd-party */
 
+@import '../3rd-party/font-awesome.min.css';
+
 /* components */
 @import "../components/button.css";
 @import "../components/footer.css";
