--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -13,14 +13,46 @@
 
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
-/* header start */
-/* header end */
-
 /* hero start */
+
 /* hero end */
 
-/* about me start */
-/* about me end */
+
+/* about start */
+
+/* about end */
+
 
 /* services start */
+
 /* services end */
+
+
+/* stats start */
+
+/* stats end */
+
+
+/* projects start */
+
+/* projects end */
+
+
+/* feedback start */
+
+/* feedback end */
+
+
+/* plan start */
+
+/* plan end */
+
+
+/* blog start */
+
+/* blog start */
+
+
+/* brands start */
+
+/* brands end */
