--- a/css/base/base.css
+++ b/css/base/base.css
@@ -7,6 +7,7 @@
 :root {
   --main-black: #222;
   --main-grey: #777;
+  --main-purple: #8490ff;
   --main-gradient: linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
 }
 
