--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -25,6 +25,49 @@
 
 /* services start */
 
+.services {
+    text-align: center;
+}
+
+.services > .row > .services-tittle {
+    margin-bottom: 16px;
+}
+
+.services > .row > .services-description {
+    margin-bottom: 64px;
+}
+
+.services > .row > .single-service,
+.services > .row > .services-tittle,
+.services > .row > .services-description {
+    border: none;
+}
+
+.service-icon {
+    text-decoration: none;
+    font-size: 32px;
+    color: var(--main-black);
+    margin-bottom: 24px;
+}
+
+.services h3 a {
+    text-decoration: none;
+    color: var(--main-black);
+}
+
+.services h3 {
+    margin-bottom: 16px;
+}
+
+.service-p {
+    margin-bottom: 32px;
+}
+
+
+.service-p {
+
+}
+
 /* services end */
 
 
