--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -30,42 +30,41 @@
 }
 
 .services > .row > .services-tittle {
-    margin-bottom: 16px;
+    margin-bottom: 2px;
 }
 
 .services > .row > .services-description {
     margin-bottom: 64px;
 }
 
-.services > .row > .single-service,
-.services > .row > .services-tittle,
-.services > .row > .services-description {
-    border: none;
-}
-
-.service-icon {
-    text-decoration: none;
+.services > .row > .single-service > .service-icon {
     font-size: 32px;
     color: var(--main-black);
     margin-bottom: 24px;
 }
 
-.services h3 a {
+.services > .row > .single-service > a {
+    margin-bottom: 24px;
     text-decoration: none;
     color: var(--main-black);
 }
 
-.services h3 {
-    margin-bottom: 16px;
+.services > .row > .single-service > a > h3 {
+    margin-bottom: 24px;
 }
 
-.service-p {
+.services > .row > .single-service .service-p {
     margin-bottom: 32px;
 }
 
+.services > .row > .single-service:hover a {
+    color: var(--main-purple);
+    transition: all 0.4s;
+}
 
-.service-p {
-
+.services > .row > .single-service:hover .service-icon {
+    color: var(--main-purple);
+    transition: all 0.2s;
 }
 
 /* services end */
