--- a/css/base/base.css
+++ b/css/base/base.css
@@ -32,10 +32,14 @@ h1 {
 h2 {
   font-size: 36px;
   font-weight: 600;
+  text-transform: capitalize;
 }
+
 h3 {
   font-size: 18px;
   font-weight: 600;
+  text-transform: capitalize;
+
 }
 
 h4 {
