--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -37,11 +37,13 @@
 .stats  * {
     color: white;
     text-align: center;
-    
     }
 
-.row {
-    margin-bottom: 20px;
+
+@media (max-width: 768px) {
+.stats  > .row > .stats-content {
+    margin-bottom: 32px;
+    }
 }
 
 /* stats end */
