--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -39,18 +39,63 @@
 
 
 /* feedback start */
+
+.feedback {
+    background-color: #f7f7f7;
+}
 .feedback-title {
     text-align: center;
+    margin-bottom: 2px;
 }
 
 .feedback-content {
     text-align: center;
+    margin-bottom: 64px;
 }
 
-/*.card1 {
+.container > .row > .card {
+    background-color: white;
+    padding: 1em 2.5em;
+}
+
+.feedback-top {
     display: flex;
+    flex-direction: row;
+    gap: 24px;
 
 }
+
+.lady {
+    width: 33px;
+    height: 33px;
+}
+
+
+.container > .row > .card > .position {
+    margin-left: 59px;
+    margin-top: 12px;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
+.container > .row > .card > .name {
+    margin-left: 59px;
+}
+
+.container > .row > .card-2::after {
+    content: up;
+    padding: 12px;
+    font-size: 16px;
+    color: black;
+}
+
+@media (max-width: 768px) {
+    .card-2 {
+        display: none;
+    }
+}
+
+
 /* feedback end */
 
 
