--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -17,6 +17,7 @@
 .container {
     background-color: #f9f9ff;
     padding-top: 20px;
+    padding-bottom: 0;
 }
 
 .title {
@@ -42,16 +43,26 @@
     .title {
         margin-top: 105px;
     }
-    
+
 }
+    
 @media (min-width: 992px) {
     h1 {
-        font-size: 64px;
-    }
-
-    
+        font-size: 48px;
+    }    
 }
 
+@media (min-width: 1189px) {
+    h1 {
+        font-size: 48px;
+    }       
+}
+
+@media (min-width: 1400px) {
+    h1 {
+        font-size: 60px;
+    }
+}
 
 /* hero end */
 
