--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -153,6 +153,7 @@
 }
 
 .about-blog-author .blog-author-name {
+    color: var(--main-black);
     margin-left: 8px;
 }
 
@@ -173,6 +174,7 @@
     margin-top: 32px;
     margin-bottom: 12px;
     transition: all 0.4s;
+    line-height: 1.25;
 }
 
 .blog-post-description {
