--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -113,13 +113,17 @@
 }
 
 .plan-number {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 36px;
   font-weight: 300;
   line-height: 1;
   border-radius: 50%;
-  padding: 20px;
-  background-color: var(--section-background);
+  width: 140px;
+  height: 140px;
+  margin: 0 auto;
+  background-color: rgba(132, 144, 255, 0.1);
   border: 30px solid rgba(132, 144, 255, 0.1);
   margin-bottom: 24px;
 }
