--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -111,6 +111,7 @@
 /* blog start */
 .blog-posts {
     text-align: center;
+    background-color: #f9f9ff;
 }
 
 .blog-posts > .row > .blogs-tittle {
@@ -209,6 +210,7 @@
     .blog-info {
         margin-top: 0px;
     }
+}
 
 /* blog start */
 
