buttons padding bottom partial commit

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -136,6 +136,10 @@
 
 
 @media (max-width: 768px) {
+
+    .feedback {
+        padding-bottom: 152px;
+    }
     .card-2 {
         display: none;
     }
