--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -10,7 +10,7 @@
 @import "../components/button.css";
 @import "../components/footer.css";
 @import "../components/header.css";
-
+@import "../components/about.css";
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
 /* hero start */
@@ -19,6 +19,51 @@
 
 
 /* about start */
+
+
+
+
+.row.about {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.about-inn {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+
+}
+
+    
+.about-details {
+    margin: 1em 0;
+    }
+    
+
+     
+.h4 {
+    margin-bottom: 35px;
+}
+
+ .about-btn {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 10px 24px;
+    font-size: 14px;
+
+    
+
+}
+.about-img {
+    margin-top: 30;
+    box-shadow: 3px;
+}
+
+
+
 
 /* about end */
 
