--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -41,7 +41,7 @@
 .container > .row > [class*='col-'] {
     float: left;
     margin: 10px var(--half-gap);
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 .container > .row > .col-1 {
     width: var(--col1);
