--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -3,7 +3,7 @@
 }
 
 .footer-h3 {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     color: #fff;
 }
 
@@ -15,23 +15,50 @@
     line-height: 1.7;
 }
 
-.form-group {
+.footer .footer-about-me a {
+    color: var(--main-purple);
+    text-decoration: none;
+}
+
+.footer-form-input {
     display: flex;
+    width: 100%;
+    height: 48px;
 }
 
-.form-group input {
-    width: 90%;
+.footer-form-input input {
+    width:100%;
     font-size: 15px;
-    line-height: 3;
     font-family: inherit;
-    padding-left: 20px;;
+    padding-left: 20px;
+    border: none;
 }
 
-.form-group button {
-    width: 10%;
+.footer-form-input input:focus {
+    outline: none;
+}
+
+.submit {
+    width: 60px;
+    border: none;
     background-color: var(--main-purple);
     color: #fff;
-    border: 1px solid var(--main-purple);
+    cursor: pointer;
 }
 
+.social-links {
+    display: flex;
+    gap: 15px;  
+    padding-top: 15px;
+    padding-left: 10px;
+}
 
+.social-links a {
+    color:#fff;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.social-links a:hover {
+    color: var(--main-purple);
+}
