fixed form font weight

--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -20,26 +20,32 @@
     text-decoration: none;
 }
 
-.footer-form-input {
+.footer-form {
     display: flex;
     width: 100%;
-    height: 48px;
+    height: 46px;
 }
 
-.footer-form-input input {
+.footer-form input {
     width:100%;
     font-size: 15px;
+    font-weight: 300;
     font-family: inherit;
     padding-left: 20px;
     border: none;
 }
 
-.footer-form-input input:focus {
+.footer-form input:focus {
     outline: none;
+    font-weight: 200;
+}
+
+.footer-form input:focus::placeholder {
+    color: transparent;
 }
 
 .submit {
-    width: 60px;
+    width: 56px;
     border: none;
     background-color: var(--main-purple);
     color: #fff;
