--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -14,15 +14,19 @@
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
 /* hero start */
-.container {
+
+.hero {
     background-color: #f9f9ff;
     padding-top: 20px;
     padding-bottom: 0;
 }
 
-
 .title {
     margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    font-weight: 200;
     text-transform: uppercase;
 }
 
@@ -40,9 +44,13 @@
     padding: 12px 24px;
 }
 
-@media (min-width: 576px) {
-    .block {
-        width: 100%;
+
+@media (max-width: 400px) {
+   .container > .hero-row > .hero-img {
+    margin: auto;    
+    width: 65%;
+    margin-left: 50%;
+    transform: translateX(-50%);
     }
 }
 
@@ -50,7 +58,6 @@
     .title {
         margin-top: 105px;
     }
-
 }
 
 @media (min-width: 1400px) {
