--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -14,12 +14,81 @@
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
 /* hero start */
+.container.hero {
+  background-color: #f9f9ff;
+  padding-top: 20px;
+  padding-bottom: 0;
+}
 
+.hero .title {
+  margin-top: 0px;
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.hero .name {
+  text-transform: uppercase;
+}
+
+.hero .description {
+  padding: 25px 0;
+}
+
+.btn.hero-btn {
+  font-size: 14px;
+  text-decoration: none;
+  padding: 12px 24px;
+}
+
+@media (max-width: 768px) {
+  .container > .hero-row > .hero-img {
+    margin: auto;
+    width: 65%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media (min-width: 768px) {
+  .title {
+    margin-top: 105px;
+  }
+  .container.hero {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .hero .hero-row {
+    display: flex;
+  }
+  .hero .text-container {
+    align-self: center;
+  }
+}
+
+@media (min-width: 992px) {
+  h1 {
+    font-size: 60px;
+  }
+  .hero .hero-row {
+    display: inline-block;
+  }
+  .container.hero {
+    padding-top: 60px;
+    padding-bottom: 0;
+  }
+  .hero .hero-row .text-container {
+    margin-top: 120px;
+  }
+}
 /* hero end */
 
 /* about start */
 .container.about {
-  padding-top: 0;
   padding-bottom: 0;
 }
 
