--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -100,7 +100,7 @@
     text-align: center;
 }
 
-.projects.img {
+.projects img {
     width: 100%;
 }
 
@@ -149,7 +149,7 @@
     color: var(--main-purple);
 }
 
-.projects. img:hover {
+.projects img:hover {
     opacity: 20%;  
 }
 
