--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -220,6 +220,7 @@
 
 .feedback {
     background-color: #f9f9ff;
+    padding-bottom: 152px;
 }
 .feedback-title {
     text-align: center;
@@ -231,17 +232,21 @@
     margin-bottom: 64px;
 }
 
-
-.container > .row > .card {
-    background-color: white;
-    padding: 1em 2.5em;
-}
-
-.feedback-top {
+.slides {
     display: flex;
     flex-direction: row;
     gap: 24px;
 
+}
+
+.container > .row > .slides > .card {
+    background-color: white;
+    padding: 1em 2.5em;
+}
+
+.card-2 {
+  display: none;
+  overflow: hiden;
 }
 
 .lady {
@@ -250,14 +255,14 @@
 }
 
 
-.container > .row > .card > .position {
+.container > .row > .slides > .card > .position {
     margin-left: 59px;
     margin-top: 12px;
     font-weight: bold;
     text-transform: capitalize;
 }
 
-.container > .row > .card > .name {
+.container > .row > .slides > .card > .name {
     margin-left: 59px;
 }
 
@@ -274,11 +279,11 @@
     color: var(--main-grey);
     -webkit-text-stroke: 1px white;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 3px;
     position: absolute;
-    top: 25%;
-    right: -2%;
+    top: 110%;
+    right: 43%;
     box-shadow: -12px 6px 21px #E0E0E5;
 }
 
@@ -313,21 +318,18 @@
  }
 
 
-@media (max-width: 768px) {
+@media (min-width: 576px) {
 
     .feedback {
         padding-bottom: 152px;
     }
-    .card-2 {
-        display: none;
-    }
-
+   
     .cards > .arrow {
         display: flex;
         flex-direction: row;
         gap: 3px;
         position: absolute;
-        top: 106%;
+        top: 110%;
         right: 43%;
         
     }
@@ -342,10 +344,13 @@
 
 }
 
-@media (max-width: 992px) {
+@media (min-width: 768px) {
 
     .feedback {
         padding-bottom: 152px;
+    }
+    .card-2 {
+      display: block;
     }
 
     .cards > .arrow {
@@ -354,7 +359,7 @@
         gap: 3px;
         position: absolute;
         top: 106%;
-        right: 44%;
+        right: 41%;
     }
 
     .cards > .arrow > .arrow-up {
@@ -378,7 +383,7 @@
         gap: 3px;
         position: absolute;
         top: 28%;
-        right: -3%;
+        right: -6%;
         }
 }    
 
@@ -389,7 +394,7 @@
         gap: 3px;
         position: absolute;
         top: 25%;
-        right: -2%;
+        right: -5%;
         }
 }    
 
