--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -10,6 +10,7 @@
 @import "../components/button.css";
 @import "../components/footer.css";
 @import "../components/header.css";
+@import "../components/project.css";
 
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
