--- a/css/base/base.css
+++ b/css/base/base.css
@@ -8,7 +8,10 @@
   --main-black: #222;
   --main-grey: #777;
   --main-purple: #8490ff;
-  --main-gradient: linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
+  --main-blue: #62bdfc;
+  --section-background: #f9f9ff;
+  --main-gradient: linear-gradient(to right, #8490ff, #62bdfc);
+
 }
 
 body,
@@ -25,17 +28,20 @@ body {
 }
 
 h1 {
-  font-size: 62px;
+  font-size: 30px;
   font-weight: 600;
 }
 
 h2 {
   font-size: 36px;
   font-weight: 600;
+  text-transform: capitalize;
 }
+
 h3 {
   font-size: 18px;
   font-weight: 600;
+  text-transform: capitalize;
 }
 
 h4 {
@@ -50,4 +56,8 @@ p {
   font-weight: 300;
   color: var(--main-grey);
   line-height: 1.7;
+}
+
+.text-align-center {
+  text-align: center;
 }
